--- a/BankSystem/prop/query.properties
+++ b/BankSystem/prop/query.properties
@@ -2,3 +2,4 @@
 #encoding=utf-8
 checkid=select id from user_account where id = ?
 createuser=insert into user_account values(lpad(seq_acc.nextval,10,0),?,default,?,?,sysdate,?,?)
+login=select id from user_account where id = ? and
