송금 기능만 구현
log작업 필요

--- a/BankSystem/prop/query.properties
+++ b/BankSystem/prop/query.properties
@@ -1,6 +1,8 @@
 #2018/01/29
 #encoding=utf-8
 checkid=select id from user_account where id = ?
-createuser=insert into user_account values(lpad(seq_acc.nextval,10,0),?,default,?,?,sysdate,?,?)
+createuser=insert into user_account values(lpad(seq_acc.nextval,5,0),?,default,?,?,sysdate,?,?)
 login=select * from user_account where id = ? and password = ?
 deposit=update user_account set bal = ? where id = ?
+withdraw=update user_account set bal = ? where id = ?
+checkrcc=select * from user_account where acc_number = ?
