--- a/BankSystem/prop/logquery.properties
+++ b/BankSystem/prop/logquery.properties
@@ -2,3 +2,4 @@
 #2019/01/30
 #LOG SQL QUERY
 deposit=insert into bank_log values(?, null, sysdate ,? ,null ,1 ,?)
+withdraw=insert into bank_log values(?, null, sysdate, null, ?, 2, ?)
