로그 구현 완료
거래내역 조회 기능 추가 필요

--- a/BankSystem/prop/logquery.properties
+++ b/BankSystem/prop/logquery.properties
@@ -3,3 +3,4 @@
 #LOG SQL QUERY
 deposit=insert into bank_log values(?, null, sysdate ,? ,null ,1 ,?)
 withdraw=insert into bank_log values(?, null, sysdate, null, ?, 2, ?)
+transfer=insert into bank_log values(?, ?, sysdate, null, ?, 3, ?)
