입금내역조회 버그 발견

--- a/BankSystem/prop/logquery.properties
+++ b/BankSystem/prop/logquery.properties
@@ -4,3 +4,4 @@
 deposit=insert into bank_log values(?, null, sysdate ,? ,null ,1 ,?)
 withdraw=insert into bank_log values(?, null, sysdate, null, ?, 2, ?)
 transfer=insert into bank_log values(?, ?, sysdate, null, ?, 3, ?)
+getdlog=select * from bank_log where id = ?
