--- a/BankSystem/prop/logquery.properties
+++ b/BankSystem/prop/logquery.properties
@@ -4,4 +4,4 @@
 deposit=insert into bank_log values(?, null, sysdate ,? ,null ,1 ,?)
 withdraw=insert into bank_log values(?, null, sysdate, null, ?, 2, ?)
 transfer=insert into bank_log values(?, ?, sysdate, null, ?, 3, ?)
-getdlog=select * from bank_log where id = ?
+getdlog=select to_char(ex_date,'RRRR/MM/DD HH:MI:SS') AS "date", deposit from bank_log where id = ? and log_type = 1
