출금 조회 기능 구현
관리자 메뉴 구성해야 함.

--- a/BankSystem/prop/logquery.properties
+++ b/BankSystem/prop/logquery.properties
@@ -5,3 +5,4 @@ deposit=insert into bank_log values(?, null, sysdate ,? ,null ,1 ,?)
 withdraw=insert into bank_log values(?, null, sysdate, null, ?, 2, ?)
 transfer=insert into bank_log values(?, ?, sysdate, null, ?, 3, ?)
 getdlog=select to_char(ex_date,'RRRR/MM/DD HH:MI:SS') AS "date", deposit from bank_log where id = ? and log_type = 1
+getwlog=select to_char(ex_date,'RRRR/MM/DD HH:MI:SS'), withdraw, log_type, user_comment from bank_log where id = ? and log_type in (2,3)
