계좌 추가 생성 기능 구현
다음 구현 목표는 입금시에 내 계좌 중 하나의 계좌로 입금할 수 있도록 구현할 예정임.

--- a/BankSystem/prop/query.properties
+++ b/BankSystem/prop/query.properties
@@ -6,3 +6,4 @@ login=select * from user_account where id = ? and password = ?
 deposit=update user_account set bal = ? where id = ?
 withdraw=update user_account set bal = ? where id = ?
 checkrcc=select * from user_account where acc_number = ?
+checkacc=select * from user_account where id =?
