입출금 기록 정렬해서 출력하게 수정

--- a/BankSystem/prop/logquery.properties
+++ b/BankSystem/prop/logquery.properties
@@ -1,8 +1,9 @@
 #encoding=utf-8
 #2019/01/30
 #LOG SQL QUERY
-deposit=insert into bank_log values(?, null, sysdate ,? ,null ,1 ,?)
-withdraw=insert into bank_log values(?, null, sysdate, null, ?, 2, ?)
-transfer=insert into bank_log values(?, ?, sysdate, null, ?, 3, ?)
-getdlog=select to_char(ex_date,'RRRR/MM/DD HH:MI:SS') AS "date", deposit from bank_log where id = ? and log_type = 1
-getwlog=select to_char(ex_date,'RRRR/MM/DD HH:MI:SS'), withdraw, log_type, user_comment from bank_log where id = ? and log_type in (2,3)
+deposit=insert into bank_log values(?, null, sysdate ,? ,null ,1 ,?,?,null)
+withdraw=insert into bank_log values(?, null, sysdate, null, ?, 2, ?,?,null)
+transfer=insert into bank_log values(?, ?, sysdate, null, ?, 3, ?, ?, ?)
+getdlog=select to_char(ex_date,'RRRR/MM/DD HH:MI:SS') AS "date", deposit, acc_number from bank_log where acc_number = ? and log_type = 1 order by 1
+getwlog=select to_char(ex_date,'RRRR/MM/DD HH:MI:SS'), withdraw, log_type, user_comment, acc_number, rcc_number from bank_log where acc_number = ? and log_type in (2,3) order by 1
+getalllog=select to_char(ex_date,'RRRR/MM/DD HH:MI:SS'), withdraw, log_type, user_comment, acc_number, rcc_number from bank_log where acc_number = ? order by 1
