--- a/BankSystem/prop/query.properties
+++ b/BankSystem/prop/query.properties
@@ -2,7 +2,7 @@
 #encoding=utf-8
 checkid=select id from user_account where id = ?
 createuser=insert into user_account values(lpad(seq_acc.nextval,5,0),?,default,?,?,sysdate,?,?)
-login=select * from user_account where id = ? and password = ?
+login=select * from user_account where id = ? and password = ? order by 1
 deposit=update user_account set bal = ? where acc_number = ?
 withdraw=update user_account set bal = ? where acc_number = ?
 checkrcc=select * from user_account where acc_number = ?
